--- a/templates/package/package_form.html
+++ b/templates/package/package_form.html
@@ -22,7 +22,7 @@
             {{ form|crispy }}
         </fieldset>
         
-        <input class="btn btn-default" type="submit" name="add" value="{{ action }} {% trans "package" %}">
+        <input class="btn btn-default" type="submit" name="add" value="{{ action }} {% trans 'package' %}">
     </form>
 
 {% endblock %}
